完成好友关注功能开发

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,3 +26,5 @@ mybatis-plus:
 logging:
   level:
     com.hmdp: debug
+    org.springframework.web: DEBUG
+    org.springframework.web.servlet: DEBUG
